k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: quizapp
spec:
  selector:
    app: quizapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
  type: LoadBalancer
